from __future__ import annotations

from typing import Optional, Protocol

from src.dto.user.user_dto import UserCreate, UserUpdate, UserResponse


class UserRepository(Protocol):
    def get_by_id(self, item_id: int) -> Optional[UserResponse]: ...
    def get_all(self, skip: int = 0, limit: int = 100) -> list[UserResponse]: ...
    def create(self, data: UserCreate) -> UserResponse: ...
    def update(self, item_id: int, data: UserUpdate) -> Optional[UserResponse]: ...
    def delete(self, item_id: int) -> bool: ...
