from __future__ import annotations

from typing import Optional, Protocol

from src.dto.friend_request.friend_request_dto import FriendRequestCreate, FriendRequestUpdate, FriendRequestResponse


class FriendRequestRepository(Protocol):
    def get_by_id(self, item_id: int) -> Optional[FriendRequestResponse]: ...
    def get_all(self, skip: int = 0, limit: int = 100) -> list[FriendRequestResponse]: ...
    def create(self, data: FriendRequestCreate) -> FriendRequestResponse: ...
    def update(self, item_id: int, data: FriendRequestUpdate) -> Optional[FriendRequestResponse]: ...
    def delete(self, item_id: int) -> bool: ...
