from __future__ import annotations

from typing import Optional, Protocol

from src.dto.friendship.friendship_dto import FriendshipCreate, FriendshipUpdate, FriendshipResponse


class FriendshipRepository(Protocol):
    def get_by_id(self, item_id: int) -> Optional[FriendshipResponse]: ...
    def get_all(self, skip: int = 0, limit: int = 100) -> list[FriendshipResponse]: ...
    def create(self, data: FriendshipCreate) -> FriendshipResponse: ...
    def update(self, item_id: int, data: FriendshipUpdate) -> Optional[FriendshipResponse]: ...
    def delete(self, item_id: int) -> bool: ...
